# gestao-de-projetos-servpen

./: COMO-ATUALIZAR.md  DEV.md  INSTALAR-EM-NOVO-SERVIDOR.md  README.md  app.py  atualizar.sh  auth.py  database.py  deploy-238.sh  docker-compose.yml  migrar-sqlite-para-postgres.py  publicar-no-238.40.sh  py-local.sh  pyproject.toml  relatorios.py  requirements.txt  run-local.sh  seed.py  setup-local.sh
.streamlit/: config.toml
core/: __init__.py  auth_ui.py  chat_utils.py  data.py  helpers.py  mencoes.py  notif.py  ui_feedback.py
deploy/: gestao-de-projetos.conf  gestao-de-projetos.service  install.sh
docs/: MELHORIAS-SUGERIDAS.md  ROLLBACK-PARA-SQLITE.md
setup-novo-servidor/: atualizar-app.sh  backup-gestao-de-projetos.service  backup-gestao-de-projetos.sh  backup-gestao-de-projetos.timer  db.env.example  gestao-de-projetos.conf  gestao-de-projetos.service  install.sh
views/: __init__.py  acessos.py  agenda.py  arquivos.py  auditoria.py  chat.py  dashboard.py  diario.py  equipe.py  kanban.py  novo_projeto.py
